found_online/linux.gda.pl/firewallp.txt
# Generated by iptables-save v1.2.7a on Mon May 12 02:11:23 2003
*filter
:INPUT ACCEPT [67:6686]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [47:4622]
-A FORWARD -p tcp -m tcp --sport 410:415 -m time  --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP 
-A FORWARD -p tcp -m tcp --sport 6881:6889 -m time  --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP 
-A FORWARD -p tcp -m tcp --sport 4661:4669 -m time  --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -j DROP 
-A FORWARD -p tcp -m time  --timestart 06:59 --timestop 23:59 --days Sun,Mon,Tue,Wed,Thu,Fri,Sat -m string --string X-Kazaa-User -j DROP 

-A FORWARD -s  192.168.1.1 -p tcp --syn -m mac --mac 00:60:08:76:35:51 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.2 -p tcp --syn -m mac --mac 00:50:BF:6A:D3:F9 -m connlimit --connlimit-above 15 -j REJECT 
-A FORWARD -s  192.168.1.3 -p tcp --syn -m mac --mac 00:00:B4:3F:67:1C -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.4 -p tcp --syn -m mac --mac 00:30:4F:2E:70:72  -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.5 -p tcp --syn -m mac --mac 00:30:4F:2E:70:72 -m connlimit --connlimit-above 15 -j REJECT
-A FORWARD -s  192.168.1.6 -p tcp --syn -m mac --mac 00:00:E8:69:76:31 -m connlimit --connlimit-above 15 -j REJECT 

-A FORWARD -s 192.168.1.1 -m mac --mac 00:60:08:76:35:51 -j ACCEPT 
-A FORWARD -s 192.168.1.2 -m mac --mac 00:50:BF:6A:D3:F9 -j ACCEPT 
-A FORWARD -s 192.168.1.3 -m mac --mac 00:00:B4:3F:67:1C -j ACCEPT 
-A FORWARD -s 192.168.1.4 -m mac --mac 00:30:4F:2E:70:7E -j ACCEPT 
-A FORWARD -s 192.168.1.5 -m mac --mac 00:30:4F:2E:70:7E  -j ACCEPT 
-A FORWARD -s 192.168.1.6 -m mac --mac 00:00:E8:69:76:31 -j ACCEPT 

-A FORWARD -d 192.168.0.0/255.255.0.0 -j ACCEPT
-A FORWARD -d 172.16.0.0/255.255.0.0 -j ACCEPT 
-A FORWARD -p icmp -j ACCEPT 
COMMIT
# Completed on Mon May 12 02:11:23 2003
# Generated by iptables-save v1.2.7a on Mon May 12 02:11:23 2003
*nat
:PREROUTING ACCEPT [16:851]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 80.51.240.202 -p tcp -m tcp --dport 5060 -j DNAT --to-destination 192.168.1.1:5060                                                                   
-A PREROUTING -d 80.51.240.202 -p udp -m udp --dport 5060 -j DNAT --to-destination 192.168.1.1:5060                                                                   
-A PREROUTING -d 80.51.240.202 -p tcp -m tcp --dport 16384:16403 -j DNAT --to-destination 192.168.3.10:16384-16403         
-A PREROUTING -d 80.51.240.202 -p tcp -m tcp --dport 16969 -j DNAT --to-destination 192.168.3.10:16969
-A PREROUTING -d 80.51.240.202 -p udp -m udp --dport 16969 -j DNAT --to-destination 192.168.3.10:16969

-A PREROUTING -s 172.16.0.0/255.255.0.0 -p udp -m udp --dport 80 -j REDIRECT --to-ports 3128 
-A PREROUTING -s 172.16.0.0/255.255.0.0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128 
-A PREROUTING -s 192.168.0.0/255.255.0.0 -p udp -m udp --dport 80 -j REDIRECT --to-ports 3128 
-A PREROUTING -s 192.168.0.0/255.255.0.0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 3128 
-A PREROUTING -d 192.168.0.0/255.255.0.0 -j ACCEPT 
-A PREROUTING -d 172.16.0.0/255.255.0.0 -j ACCEPT 
-A POSTROUTING -s 192.168.1.1 -p tcp -m tcp --sport 5060 -j SNAT --to-source 80.51.240.202:5060                                                                       
-A POSTROUTING -s 192.168.1.1 -p udp -m udp --sport 5060 -j SNAT --to-source 80.51.240.202:5060                                                                       
-A POSTROUTING -s 192.168.3.10 -p udp -m udp --sport 16384:16403 -j SNAT --to-source 80.51.240.202:16384-16403      
-A POSTROUTING -s 192.168.3.10 -p tcp -m tcp --sport 16969 -j SNAT --to-source 80.51.240.202:16969 
-A POSTROUTING -s 192.168.3.10 -p udp -m udp --sport 16969 -j SNAT --to-source 80.51.240.202:16969 
-A POSTROUTING -s 172.16.0.0/255.255.0.0 -d ! 172.168.0.0/255.255.0.0 -j MASQUERADE 
-A POSTROUTING -s 192.168.0.0/255.255.0.0 -d ! 192.168.0.0/255.255.0.0 -j MASQUERADE 
COMMIT

# Completed on Mon May 12 02:11:23 2003
# Generated by iptables-save v1.2.7a on Mon May 12 02:11:23 2003
*mangle
:PREROUTING ACCEPT [1872:1089694]
:INPUT ACCEPT [67:6686]
:FORWARD ACCEPT [1803:1082829]
:OUTPUT ACCEPT [47:4622]
:POSTROUTING ACCEPT [1854:1088257]
COMMIT
# Completed on Mon May 12 02:11:23 2003
